feat: update the code and add logic

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,17 @@
-/* src/index.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+:root {
+  font-family: Roboto, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
 
-/* You can add custom global styles here */
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: white;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
